fetched data from db + displayed it

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://Ibrahim:<password>@cluster0.nnvdpvb.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://Ibrahim:friday123@cluster0.nnvdpvb.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
