--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://Ibrahim:friday123@cluster0.nnvdpvb.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
+
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
