added login logic

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://Ibrahim:friday123@cluster0.nnvdpvb.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
 
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+
+SECRET_KEY= "y8oLbc9dav0YsjruT3zmFq6od8MU2nCW+LXFrY5psAU="
+
+NODE_ENV = development
